Internal: fix translation for message sent to tutor on learner's assignation - refs BT#21681

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -21778,6 +21778,9 @@ msgstr "Sehr schwach"
 msgid "You have been assigned the learner %s"
 msgstr "Der Schüler %s, die Ihnen zugeordnet"
 
+msgid "You have been assigned the learner %s with url %s"
+msgstr "Sie wurden dem Teilnehmer %s als Tutor zugewiesen. Zum Profil: %s"
+
 msgid "You have been assigned as tutor for the learner %s.<br/>"
 msgstr "Sie wurden dem Teilnehmer %s als Tutor zugewiesen. Zum Profil: %s"
 
