--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -21722,6 +21722,9 @@ msgstr "Very weak"
 msgid "You have been assigned the learner %s"
 msgstr "You have been assigned the learner %s"
 
+msgid "You have been assigned the learner %s with url %s"
+msgstr "You have been assigned the learner %s with url %s"
+
 msgid "You have been assigned as tutor for the learner %s.<br/>"
 msgstr "You have been assigned as tutor for the learner %s.<br/>"
 
