--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -21722,6 +21722,9 @@ msgstr ""
 msgid "You have been assigned the learner %s"
 msgstr ""
 
+msgid "You have been assigned the learner %s with url %s"
+msgstr "Sei stata assegnata come tutor per l'apprendente %s.\nPuoi accedere alla sua scheda qui: %s"
+
 msgid "You have been assigned as tutor for the learner %s.<br/>"
 msgstr ""
 
