--- a/translations/messages.nl.po
+++ b/translations/messages.nl.po
@@ -21876,6 +21876,9 @@ msgstr "Heel zwak"
 msgid "You have been assigned the learner %s"
 msgstr "U bent toegewezen aan de student %s"
 
+msgid "You have been assigned the learner %s with url %s"
+msgstr "U bent als tutor toegewezen aan student %s. U kunt zijn profiel bekijken van hier: %s"
+
 msgid "You have been assigned as tutor for the learner %s.<br/>"
 msgstr "U bent als tutor toegewezen aan student %s. U kunt zijn profiel bekijken van hier: %s"
 
