--- a/translations/messages.pt_BR.po
+++ b/translations/messages.pt_BR.po
@@ -21722,6 +21722,9 @@ msgstr "Muito fraco"
 msgid "You have been assigned the learner %s"
 msgstr "A você foi designado o(a) aluno(a) %s"
 
+msgid "You have been assigned the learner %s with url %s"
+msgstr "Você foi designado como tutor para o aluno(a) %s. Você pode acessar o perfil dele(a) aqui: %s"
+
 msgid "You have been assigned as tutor for the learner %s.<br/>"
 msgstr "Você foi designado como tutor para o aluno(a) %s. Você pode acessar o perfil dele(a) aqui: %s"
 
