--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2024-04-24 09:40+0000\n"
+"PO-Revision-Date: 2024-05-27 08:58+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: French <https://translation.chamilo.org/projects/chamilo/"
 "messages/fr/>\n"
@@ -9026,7 +9026,7 @@ msgid "Add it"
 msgstr "Ajouter une ressource"
 
 msgid "Attachments"
-msgstr "Ressources ajoutées"
+msgstr "ressource(s) ajoutée(s)"
 
 msgid "Time report for teacher %s"
 msgstr "Rapport de temps pour l'enseignant %s"
